tests/machine/x/c/map_literal_dynamic.error
exit status 1
/workspace/mochi/tests/machine/x/c/map_literal_dynamic.c: In function ‘_mochi_main’:
/workspace/mochi/tests/machine/x/c/map_literal_dynamic.c:91:22: error: invalid initializer
   91 |   map_string_int m = (tmp_item_t){.a = x, .b = y};
      |                      ^
